--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ html {
 
 body {
   margin: 0;
+  text-align: center;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   color: #212121;
